# HW5-Submit

./: 1.MamatScript.in  CMakeLists.txt  Commands.cpp  Commands.h  LineParser.cpp  LineParser.h  MamatScriptEngine.cpp  MamatScriptEngine.h  Matrix.cpp  Matrix.h  MySharedPtr.h  Scalar.cpp  Scalar.h  ScriptExceptions.h  Variable.cpp  Variable.h  VariablesMap.cpp  VariablesMap.h  change_extensions  main - MySharedPtr.cpp  main - VariablesMap.cpp  main.cpp  makefile
